--- a/static/css/base.css
+++ b/static/css/base.css
@@ -172,9 +172,14 @@ a:focus {
     border-top-width: 0px;
     border-bottom: 2px solid #007bff;
 }
-.list-group.desktop-menu-right .list-group-item.active, .list-group.desktop-menu-right .list-group-item a.active {
+.list-group.desktop-menu-right .list-group-item a.active {
     color:#c15b5b !important;
 }
+
+.form-control.search:focus, .form-control.search {
+    color: #f8f9fa;
+}
+
 .list-group#login{
     min-width:60vw !important;
     max-width:60vw !important;
