--- a/templates/cart/checkout.html
+++ b/templates/cart/checkout.html
@@ -123,12 +123,20 @@
                     </form>
                 </div>
             </div> {% endcomment %}
+            {% if not request.user.is_authenticated %}
+            <div class="mt-5 bg-white text-monospace d-flex justify-content-between">
+                <p class="mb-0 p-2">Email: {{ billing_profile.email }} </p>
+                <button type="button" class="btn btn-primary text-monospace rounded-0" data-toggle="modal" data-target="#editemail">
+                    Change
+                </button>
+            </div>
+            {% endif %}
             <div class="accordion my-5" id="accordionExample">
                 <div class="card bg-transparent">
                     <div class="card-header" id="headingOne" style="background-color:#766596;border-bottom:2px solid white;">
                     <h2 class="mb-0">
                         <button class="btn btn-link text-white text-monospace font-weight-bolder text-uppercase text-decoration-none btn-block" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                            <i class="fas fa-map-marked-alt "></i> Shipping Address
+                            <i class="fas fa-map-marked-alt text-danger"></i> Shipping Address
                         </button>
                     </h2>
                     </div>
@@ -150,25 +158,24 @@
                                 </button>
                                 
                                 {% else %}
-                                <button type="button" class="btn btn-transparent btn-link" data-toggle="modal" data-target="#editaddress">
+                                <button type="button" class="btn btn-primary text-monospace rounded-0" data-toggle="modal" data-target="#editaddress">
                                     Edit
                                 </button>
-                                
                                 {% endif %}
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="card bg-transparent">
-                    <div class="card-header" id="headingTwo" style="background-color:rgb(255 203 123);border-bottom:2px solid white;">
+                    <div class="card-header" id="headingTwo" style="background-color: rgb(225, 203, 123);border-bottom:2px solid white;">
                     <h2 class="mb-0">
                         <button class="btn btn-link text-white text-monospace font-weight-bolder text-uppercase btn-block text-decoration-none collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                            <i class="fas fa-luggage-cart"></i> Order #{{ object.order_id }}
+                            <i class="fas fa-luggage-cart text-primary"></i> Order <span class="bg-dark p-1">#{{ object.order_id }}</span>
                         </button>
                     </h2>
                     </div>
                     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
-                        <div class="card-body text-monospace text-white py-0" style="background-color:rgb(255 203 123);">
+                        <div class="card-body text-monospace text-white py-0" style="background-color: rgb(255, 203, 123);">
                             <ul class="list-group list-group-flush">
                                 {% cartlist %}
                             </ul>
@@ -176,15 +183,15 @@
                     </div>
                 </div>
                 <div class="card bg-transparent">
-                    <div class="card-header" id="headingThree" style="background-color:rgb(170 190 125);border-bottom:2px solid white;">
+                    <div class="card-header" id="headingThree" style="background-color: rgb(170, 190, 125);border-bottom:2px solid white;">
                     <h2 class="mb-0">
                         <button class="btn btn-link text-white btn-block text-monospace font-weight-bolder text-uppercase text-decoration-none collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                            <i class="fas fa-check-circle"></i> Finalize Checkout
+                            <i class="fas fa-check-circle text-black-50"></i> Finalize Checkout
                         </button>
                     </h2>
                     </div>
                     <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
-                        <div class="card-body text-monospace text-white" style="background-color:rgb(170 190 125);">
+                        <div class="card-body text-monospace text-white" style="background-color: rgb(170, 190, 125);">
                             <p class="card-text">Cart Total: {{ cart.get_total_price|currency }}</p>
                             {% if object %}
                             <p class="card-text">Shipping Total: {{ object.shipping_total|currency }}</p>
@@ -192,7 +199,7 @@
                             {% endif %}
                         </div>
                         <form class='card-footer bg-info' method='POST' action="">{% csrf_token %}
-                            <button type='submit' {% if not address %}disabled{% endif %} class='btn btn-success btn-md rounded-0'>Pay Now <i class="fas fa-lock"></i></button>
+                            <button type='submit' {% if not address %}disabled{% endif %} class='btn btn-block btn-success btn-md rounded-0'><i class="fas fa-money-bill-wave"></i> <i class="fas fa-money-bill-wave"></i>&nbsp;Pay Now&nbsp;<i class="fas fa-money-bill-wave"></i> <i class="fas fa-money-bill-wave"></i></button>
                         </form>
                     </div>
                 </div>
@@ -262,6 +269,29 @@
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                         <button type="submit" form="addresseditform" class="btn btn-primary">Save changes</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="modal fade" id="editemail" tabindex="-1" role="dialog" aria-labelledby="editemailTitle" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="editemailTitle">Edit Email</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <form method="POST" action="#" id="emaileditform">
+                            {% csrf_token %}
+                            {% crispy guest_form %}
+                            <input type="hidden" name="next" value="{{ request.build_absolute_uri }}"/>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button type="submit" form="emaileditform" class="btn btn-primary">Save changes</button>
                     </div>
                 </div>
             </div>
