--- a/templates/assets/navbar.html
+++ b/templates/assets/navbar.html
@@ -1,6 +1,6 @@
 {% load static %}
 {% load extras %}
-<div id="cart">
+<div id="navigation">
     <nav id="sidebar" class="d-lg-none">
         <div id="dismiss">
             <button type="button" id="sidebarCollapsev" class="navbar-btn">
@@ -9,16 +9,6 @@
                 <span></span>
             </button>
         </div>
-        {% comment %} <div class="sidebar-header d-flex">
-            <h1 class="logo"><i class="fab mx-1 fa-think-peaks"></i></h1>
-            <h1 class="logo"><i class="fab mx-1 fa-think-peaks text-danger"></i></h1>
-            <h1 class="logo"><i class="fab mx-1 fa-think-peaks text-primary"></i></h1>
-        </div> {% endcomment %}
-        {% comment %} <span class="font-weight-bold">
-            {% if request.user.is_authenticated %}
-            <p class="mx-2">Hi, {{ request.user.get_full_name }}</p>
-            {% endif %}
-        </span> {% endcomment %}
         <ul class="list-unstyled list-group font-weight-bold mobile p-2 list-group-flush mt-5" id="mobile">
             <li class="{% if 'categories/' not in request.path and 'account/' not in request.path and 'cart/' not in request.path %}active {% endif %}list-group-item d-flex menu-list bg-transparent">
                 <i class="fas fa-home text-white-50"></i>&nbsp;<a href="/">HOME</a>
@@ -58,7 +48,7 @@
                     <a href="/"><img src="{% static 'image/favicon.ico' %}" class="logo-image" /></a>
                 </div>
                 <div id="cartnav-mobile" class="animate__animated animate__slideInRight"> 
-                    <a id="" href="{% url 'cart:cart-detail' %}" class="btn btn-link text-decoration-none text-dark bg-transparent d-inline-block d-lg-none .cart" role="button">
+                    <a id="cart" href="{% url 'cart:cart-detail' %}" class="btn btn-link text-decoration-none text-dark bg-transparent d-inline-block d-lg-none" role="button">
                         <i class="fas fa-box-open position-relative align-middle text-center" :class="{'badger': numItems > 0}" :data-count="numItems"></i>
                     </a>
                 </div>
@@ -100,25 +90,47 @@
             </div>
         </div>
     </nav>
-    {% comment %} <transition enter-active-class="animate__animated animate__zoomIn animate__faster" leave-active-class="animate__animated animate__slideOutDown animate__faster"> {% endcomment %}
     <div class="modal animate__animated animate__zoomIn animate__fast" id="searchModal" style="z-index:10000;" tabindex="-1" role="dialog" aria-labelledby="searchModalTitle" aria-hidden="true">
         <div class="modal-dialog h-100 vw-100 m-0" role="document">
             <div class="modal-content h-100 vw-100" style="background:#212529;opacity:.95;">
                 <div class="modal-header border-bottom-0">
-                    <button type="button" class="close text-danger remove-outline" data-custom-dismiss="modal" aria-label="Close">
+                    <button type="button" class="close text-danger remove-outline" @click="close" data-custom-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true"><i class="fas fa-3x fa-times"></i></span>
                     </button>
                 </div>
-                <div class="modal-body" method="GET">
+                <div class="modal-body">
                     <div class="col-12 col-md-11 mx-auto">
-                    <form>
-                        <div class="input-group mb-3">
-                            <input type="text" class="form-control bg-transparent search border-bottom border-top-0 border-right-0 border-left-0 rounded-0" id="InputSearch" name=query type="search" placeholder="search..." aria-label="Search" style="line-height:3rem;font-size:2rem;">
-                            <div class="input-group-append">
-                                <button class="px-1 btn btn-link text-decoration-none search-button bg-transparent border-bottom border-left-0 border-top-0 border-right-0 rounded-0 remove-outline" type="submit" id="basic-addon1"><i class="fas fa-search h3 text-success"></i></span>
+                        <form method="GET" data-url="{% url 'shop:api-search' %}" v-on:submit.prevent="search($event)">
+                            <div class="input-group mb-3">
+                                <input type="text" v-model="query" autocomplete="off" class="form-control bg-transparent search border-bottom border-top-0 border-right-0 border-left-0 rounded-0" id="InputSearch" name="query" placeholder="search our store..." aria-label="Search" style="line-height:3rem;font-size:2rem;">
+                                <div class="input-group-append">
+                                    <button class="px-1 btn btn-link text-decoration-none search-button bg-transparent border-bottom border-left-0 border-top-0 border-right-0 rounded-0 remove-outline" type="submit" id="basic-addon1"><i class="fas fa-search h3 text-success"></i></span>
+                                </div>
                             </div>
+                            <p class="text-muted font-italic">please try to specific with search. e.g cargo pants.</p>
+                        </form>
+                        <p class="text-right text-muted font-italic" v-if="sortedTrousers.length > 0">[[ sortedTrousers.length ]] result(s) found.</p>
+                        <div v-if="loading" class="d-flex flex-column align-items-center justify-content-center" key="loading" style="min-height:55vh;">
+                            <i class="animate__animated animate__bounce animate__slow animate__infinite text-success bg-warning rounded-circle p-4 fas fa-3x text-white fa-search"></i>
+                            <p class="text-muted font-italic">loading...</p>
                         </div>
-                    </form>
+                        <transition-group mode="out-in" tag="div" v-bind:css="false" v-on:before-enter="beforeEnter" v-on:enter="enter" class="d-flex flex-column overflow-auto" style="max-height:55vh;">
+                            <div v-if="!loading && sortedTrousers.length > 0" :data-index="index" class="media mb-2 border-bottom" v-for="(trouser, index) in sortedTrousers" :key="trouser.id">
+                                <a :href="trouser.url" class="text-decoration-none">
+                                    <img :src="trouser.first_image.file" class="align-self-center mr-3" >
+                                </a>
+                                <a :href="trouser.url" class="text-decoration-none">
+                                    <div class="media-body text-monospace" style="color:rgb(255,213,0,0.9);">
+                                        <p class="mt-0 h3">[[ trouser.name ]]</p>
+                                        <p class="h4">[[ trouser.color ]]</p>
+                                        <p class="mb-0 h5">[[ trouser.price|currency ]]</p>
+                                    </div>
+                                </a>
+                            </div>
+                            <div v-if="sortedTrousers.length < 1 && !loading && empty" key="empty">
+                                <p class="text-white text-center font-italic text-monospace">No item found...</p>
+                            </div>
+                        </transition-group>
                     </div>
                 </div>
             </div>
