--- a/templates/accounts/signup.html
+++ b/templates/accounts/signup.html
@@ -4,11 +4,15 @@
 {% block content %}
 <div class="container">
     <section class="mb-4">
-      <div class="row animate__animated animate__fadeIn animate__delay-2s justify-content-center justify-content-md-end">
+      <div class="row animate__animated animate__fadeIn animate__delay-2s justify-content-center justify-content-md-between">
+        <div class="col-md-7 my-2 col-11 signupimageg my-md-auto">
+          {% include 'svg/welcoming.svg' %}
+          {% comment %} <img src="{% static 'image/welcoming.png' %}" class="animate__animated animate__backInLeft animate__slower img-fluid img-responsive img-thumbnail" /> {% endcomment %}
+        </div>
         <div class='col-11 col-md-5'>
           <h1>Sign Up</h1>
           <p>Already have an account? then please <a href="{% url 'accounts:login' %}" style="color:#dc3545;">sign in</a></p>
-          <form class="signup" id="signup_form" method="post">
+          <form class="signup animate__animated animate__fadeIn animate__slower" id="signup_form" method="post">
             {% crispy form %}
             <input class='btn btn-primary mt-3 w-100 rounded-0 btn-md' type="submit" value="Sign Up"/>
           </form>
