--- a/templates/base.html
+++ b/templates/base.html
@@ -46,8 +46,10 @@
             {% endif %}
             <div class="d-flex flex-column wrapper" style="min-height: 80vh;"> 
             {% block content %}
+
             {% endblock content %}
             </div>
+
             <footer class="container-fluid footer p-md-5 p-4 text-white-50 py-3"> 
                 <div class="row">
                     <div class="col-md-6">
@@ -224,7 +226,7 @@
                         var delay = el.dataset.index * 150
                         setTimeout(function(){
                             el.style.opacity = 1
-                            el.classList.add("animate__animated", "animate__slideInRight")    
+                            el.classList.add("animate__animated", "animate__fadeInRight")    
                         }, delay)
                     },
                 },
